--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,14 +1,13 @@
 {
-  "name": "WTF: PWA",
-  "short_name": "WTF: PWA",
-  "theme_color": "#2D2241",
-  "background_color": "#2D2241",
+  "name": "Hydrapp",
+  "short_name": "Hydrapp",
+  "theme_color": "#3767AD",
+  "background_color": "#3767AD",
   "display": "standalone",
   "orientation": "portrait",
-  "scope": "/wtf-webpack-starter/",
-  "start_url": "/wtf-webpack-starter/",
-  "icons": [
-    {
+  "scope": "/hydrapp/",
+  "start_url": "/hydrapp/",
+  "icons": [{
       "src": "pwa/manifest-icon-192.png",
       "sizes": "192x192",
       "type": "image/png",
