--- a/public/manifest.json
+++ b/public/manifest.json
@@ -7,17 +7,30 @@
   "orientation": "portrait",
   "scope": "/hydrapp/",
   "start_url": "/hydrapp/",
-  "icons": [{
-      "src": "pwa/manifest-icon-192.png",
+  "icons": [
+    {
+      "src": "pwa/manifest-icon-192.maskable.png",
       "sizes": "192x192",
       "type": "image/png",
-      "purpose": "maskable any"
+      "purpose": "any"
     },
     {
-      "src": "pwa/manifest-icon-512.png",
+      "src": "pwa/manifest-icon-192.maskable.png",
+      "sizes": "192x192",
+      "type": "image/png",
+      "purpose": "maskable"
+    },
+    {
+      "src": "pwa/manifest-icon-512.maskable.png",
       "sizes": "512x512",
       "type": "image/png",
-      "purpose": "maskable any"
+      "purpose": "any"
+    },
+    {
+      "src": "pwa/manifest-icon-512.maskable.png",
+      "sizes": "512x512",
+      "type": "image/png",
+      "purpose": "maskable"
     }
   ]
 }
